--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,17 @@
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "removeComments": true,
     "noLib": false,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "target": "ES2021",
-    "sourceMap": false,
     "outDir": "./dist",
     "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
   },
   "include": ["src", "__test__"],
   "exclude": ["node_modules", "**/*.spec.ts", "tests"],
