--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@aiondigital/messaging-queues",
-    "version": "1.0.0",
+    "version": "1.0.8",
     "description": "messaging queues based on different message brokers",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -15,22 +15,26 @@
     "keywords": [
         "messaging",
         "queues",
-        "rabbitmq"
+        "rabbitmq",
+        "bull"
     ],
     "author": "waqas jamil",
     "license": "ISC",
     "peerDependencies": {
         "@nestjs/common": "^10.2.7",
         "@nestjs/core": "^10.2.7",
-        "amqplib": "^0.10.3"
+        "amqplib": "^0.10.3",
+        "bull": "^3.3 || ^4.0.0"
     },
     "devDependencies": {
         "@nestjs/common": "^10.2.7",
         "@nestjs/core": "^10.2.7",
         "@types/amqplib": "^0.10.2",
+        "@types/bull": "3.15.9",
         "@types/node": "^20.8.6",
         "@typescript-eslint/eslint-plugin": "^6.7.5",
         "@typescript-eslint/parser": "^6.7.5",
+        "bull": "4.11.3",
         "eslint": "^8.51.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-import": "^2.28.1",
