--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,15 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "target": "ES2021",
+    "target": "es2017",
+    "lib": ["ES2020"],
     "outDir": "./dist",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
+    "incremental": true,
+    "resolveJsonModule": true,
+    
   },
   "include": ["src", "__test__"],
-  "exclude": ["node_modules", "**/*.spec.ts", "tests"],
+  "exclude": ["node_modules", "dist", "e2e/**/*", "**/*.spec.ts", "jest.config.ts"]
 }
