--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     ],
     "author": "waqas jamil",
     "license": "ISC",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/wjamilaion/rubix-messaging-queues.git"
+      },
     "peerDependencies": {
         "@nestjs/common": "^10.2.7",
         "@nestjs/core": "^10.2.7",
